WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111950
[CFNet] NetworkStorageSession leaks its CFURLStorageSessionRef
https://bugs.webkit.org/show_bug.cgi?id=111950
Summary
[CFNet] NetworkStorageSession leaks its CFURLStorageSessionRef
Darin Adler
Reported
2013-03-10 17:24:58 PDT
NetworkStorageSession leaks its CFURLStorageSessionRef
Attachments
Patch
(5.03 KB, patch)
2013-03-10 17:27 PDT
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2013-03-10 17:27:35 PDT
Created
attachment 192394
[details]
Patch
Darin Adler
Comment 2
2013-03-10 17:28:23 PDT
<
rdar://problem/13384134
>
Darin Adler
Comment 3
2013-03-10 18:21:14 PDT
Committed
r145336
: <
http://trac.webkit.org/changeset/145336
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug