NetworkStorageSession leaks its CFURLStorageSessionRef https://bugs.webkit.org/show_bug.cgi?id=111950 <rdar://problem/13384134>

Reviewed by Sam Weinig.

* platform/network/NetworkStorageSession.h:
Change the argument type of the constructor to a RetainPtr.
* platform/network/cf/NetworkStorageSessionCFNet.cpp:
(WebCore::NetworkStorageSession::NetworkStorageSession): Changed
the argument type to a RetainPtr.
(WebCore::NetworkStorageSession::switchToNewTestingSession): Added
calls to adoptCF to adopt the value returned by wkCreatePrivateStorageSession.
(WebCore::NetworkStorageSession::createPrivateBrowsingSession): Ditto.
(WebCore::NetworkStorageSession::cookieStorage): Changed to use adoptCF
instead of the RetainPtr constructor with AdoptCF since the former is
far easier to read.

git-svn-id: svn://svn.chromium.org/blink/trunk@145336 bbb929c8-8fbe-4397-9dbb-9b2b20218538