third_party/WebKit/Source/WebCore/platform/network/NetworkStorageSession.h
@@ -67,7 +67,7 @@ public:
 
 private:
 #if PLATFORM(MAC) || USE(CFNETWORK)
-    NetworkStorageSession(CFURLStorageSessionRef platformSession);
+    NetworkStorageSession(RetainPtr<CFURLStorageSessionRef>);
     NetworkStorageSession();
     RetainPtr<CFURLStorageSessionRef> m_platformSession;
     bool m_isPrivate;
